fixed navbar and image not alignning center

--- a/FRONTEND_REACT_TS/src/Pages/NotFoundPage/NotFoundPage.css
+++ b/FRONTEND_REACT_TS/src/Pages/NotFoundPage/NotFoundPage.css
@@ -31,9 +31,11 @@
 }
 
 .image {
-  max-width: 100px;
-  margin-bottom: 20px;
+  display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .link {
   color: blue;
